Bug 160897 - FILEOPEN: layout loop, freeze in master document linked to subdocument
Summary: FILEOPEN: layout loop, freeze in master document linked to subdocument
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.3.1 rc
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks: Layout-Loops, Writer-Loops Footnote-Endnote
  Show dependency treegraph
 
Reported: 2024-05-02 01:22 UTC by stragu
Modified: 2024-05-30 18:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-05-02 01:22:17 UTC
Steps:
1. Download attachment 103519 [details] and attachment 103520 [details]
2. Open the .odm

Result: layout loop, console showing warnings including:

   warn:sw.layout:251020:251020:sw/source/core/layout/wsfrm.cxx:3084: footnote frame on different page than ref frame?
   warn:legacy.osl:277213:277213:sw/source/core/layout/layact.cxx:589: LoopControl_1 in SwLayAction::InternalAction
   warn:legacy.osl:277437:277437:sw/source/core/layout/layact.cxx:770: LoopControl_3 in Interrupt formatting in SwLayAction::InternalAction
   warn:sw.layout:277213:277213:sw/source/core/layout/layouter.cxx:190: Looping Louie: Stage 1!

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f4ef5435df5560e6b6b061ce4053c71e2819bf51
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also on Windows.

Bibisected with linux-64-7.6 repo to first bad build [7c9b5f75e3646ec0a55465033fc7c64d13302c28] which points to 5b3fcbf23773ea8d039185dec2b9704981833473 which is a cherrypick of:

commit c303981cfd95ce1c3881366023d5495ae2edce97
author	Michael Stahl 	Wed Aug 23 15:50:59 2023 +0200
committer	Michael Stahl  	Thu Aug 24 12:43:25 2023 +0200
tdf#156724 sw: layout: fix tables not splitting due to footnotes differently
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155988

Michael, can you please have a look?
Comment 1 Commit Notification 2024-05-15 15:59:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/534d3818aedfa95ad73935235462f5ec2817f5da

tdf#160897 sw: layout: fail SwTabFrame::Split on footnote overlap

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Stahl 2024-05-15 16:24:01 UTC
the layout loop should be fixed now, but the layout is still bad on some pages.

but in 7.5 it was already differently bad, so i doubt that can be called a regression.